Criando Services e o Models e implemetando CORS

--- a/src/SmartSchoolApp/src/app/components/alunos/alunos.component.html
+++ b/src/SmartSchoolApp/src/app/components/alunos/alunos.component.html
@@ -69,7 +69,7 @@
 
 <ng-template #template>
   <div class="modal-body">
-    <app-professores-alunos (closeModal)="closeModal()" [professores]="profsAlunos"></app-professores-alunos>
+    <!-- <app-professores-alunos (closeModal)="closeModal()" [professores]="profsAlunos"></app-professores-alunos> -->
   </div>
   <div class="modal-footer">
     <button type="button" class="btn pull-right" aria-label="Close"
