Alterando sobrenome e aplicando o Spinner

--- a/src/SmartSchoolApp/src/app/components/alunos/alunos.component.html
+++ b/src/SmartSchoolApp/src/app/components/alunos/alunos.component.html
@@ -40,8 +40,7 @@
         <tr>
           <th scope="col">Visualizar</th>
           <th scope="col">#</th>
-          <th scope="col">Nome</th>
-          <th scope="col">Sobrenome</th>
+          <th scope="col">Nome completo</th>
           <th scope="col">telefone</th>
           <th scope="col">Opções</th>
         </tr>
@@ -52,7 +51,6 @@
             class="text-dark btn btn-sm btn-outline-warning">Detalhe</button></td>
           <td scope="row">{{aluno.id}}</td>
           <td>{{aluno.nome}}</td>
-          <td>{{aluno.sobrenome}}</td>
           <td>{{aluno.telefone}}</td>
           <td>
             <div class="btn-group">
